[project]
name = "aasu"
version = "0.1.7"
description = "All-in-one Api Services and Utils"
authors = [
    {name = "Izak",email = "frdev.izak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "pymongo (>=4.17.0,<5.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
